force-app/main/default/objects/Department_Contact__c/Department_Contact__c.object-meta.xml
<CustomObject>
    <label>部署/取引先担当者</label>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>部署×取引先担当者名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>