force-app/main/default/objects/Department_Contact__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先担当者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>部署/取引先担当者</relationshipLabel>
    <relationshipName>DepartmentContact</relationshipName>
    <type>Lookup</type>
</CustomField>