force-app/main/default/objects/Department_Contact__c/fields/DepartmentMaster__c.field-meta.xml
<CustomField>
    <fullName>DepartmentMaster__c</fullName>
    <label>部署マスタ</label>
    <referenceTo>DepartmentMaster__c</referenceTo>
    <relationshipLabel>部署/取引先担当者</relationshipLabel>
    <relationshipName>DepartmentMaster</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>