force-app/main/default/objects/Department_Contact__c/fields/Post__c.field-meta.xml
<CustomField>
    <fullName>Post__c</fullName>
    <label>役職</label>
    <length>255</length>
    <type>Text</type>
</CustomField>